--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -279,7 +279,7 @@ Hero
     margin-bottom: 80px;
   }
   .hero-content {
-    padding-top: 55%;
+    padding-top: 470px;
   }
   .hero-content img {
     width: 55%;
